server/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-manager-api
  namespace: recipe-manager
  labels:
    app: recipe-manager
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
  selector:
    app: recipe-manager
